fixed error with java target